[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Harrison Goeldner <contact@goeldner.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-rss-plugin = "^1.12.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
